--- a/custom_user/custom_user/custom_user/templates/home.html
+++ b/custom_user/custom_user/custom_user/templates/home.html
@@ -67,6 +67,8 @@
         <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
       </div>
 
+      <a href="/password_change_form">Change password</a>
+
     </div><!-- /.container -->
 
 
