--- a/custom_user/custom_user/custom_user/templates/home.html
+++ b/custom_user/custom_user/custom_user/templates/home.html
@@ -68,6 +68,7 @@
       </div>
 
       <a href="/password_change_form">Change password</a>
+      <a href="/logout">Logout</a>
 
     </div><!-- /.container -->
 
